k8s/producer/01-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: producer
  labels:
    app: producer
spec:
  selector:
    matchLabels:
      app: producer
  template:
    metadata:
      labels:
        app: producer
    spec:
      containers:
        - name: producer
          image: marceloagmelo/java-kafka-producer:1.0.0.RELEASE
          ports:
            - containerPort: 8080
          imagePullPolicy: Always
