k8s/producer/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: producer-service
  labels:
    app: producer
spec:
  type: ClusterIP
  selector:
    app: producer
  ports:
    - name: http
      port: 8080
      targetPort: 8080
